--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Gestion de asistencia tecnica
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=${DB_PLATFORM}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_PASSWORD}
+# Mostrar consultas SQL en logs
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
